[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyorbits"
version = "0.1.0"
authors = [
  { name="Ignacy Hejmej" }
]
description = "Orbit simulator"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "numba"
]

[project.optional-dependencies]
test = [
    "pytest"
]